# ProcessIQ

./: .env.example  .gitignore  CONTRIBUTING.md  DEMO_RESULTS.md  EXECUTION_SYSTEM.md  MIGRATION_PLAN.md  README.md  docker-compose.yml  justfile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  simple_demo_test.py  test_demo.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  plugin_request.yml
.github/workflows/: ci.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/processiq/: __init__.py  cli.py  main.py
apps/backend/src/processiq/api/: __init__.py  connectors.py  debug.py  executions.py  rpa_demo.py  scheduler.py  security.py  system.py  websockets.py  workflows.py
apps/backend/src/processiq/connectors/: __init__.py  base.py  database.py  desktop.py  playwright_connector.py  robotframework_connector.py  rpa_base.py  web.py
apps/backend/src/processiq/core/: __init__.py  config.py  engine.py  events.py  scheduler_daemon.py  security_features.py  workflow_debugger.py  workflow_engine.py
apps/backend/src/processiq/examples/: __init__.py  kaggle_to_excel_demo.py
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src/components/: ThemeToggle.tsx  theme-provider.tsx
apps/desktop/src/components/dashboard/: SchedulerWidget.tsx
apps/desktop/src/components/layout/: Layout.tsx
apps/desktop/src/components/scheduler/: CronBuilder.tsx  ScheduleExecutionHistory.tsx  SchedulerAnalytics.tsx
apps/desktop/src/components/ui/: badge.tsx  toaster.tsx
apps/desktop/src/components/workflow/: CustomNode.tsx  NodeSidebar.tsx  PropertyPanel.tsx
apps/desktop/src/hooks/: use-toast.ts  useBackendConnection.tsx  useElectronMenuHandler.tsx
apps/desktop/src/pages/: Connectors.tsx  Dashboard.tsx  Logs.tsx  N8nWorkflowDesigner.tsx  PluginManager.tsx  RPADemo.tsx  Scheduler.tsx  Security.tsx  Settings.tsx  VisualWorkflowDesigner.tsx  WorkflowDesigner.tsx  WorkflowHistory.tsx
apps/desktop/src/services/: n8nService.ts  rpaService.ts  workflowExecutionService.ts
apps/desktop/src/utils/: testWorkflow.ts
docs/: RPA_ORCHESTRATION_OVERVIEW.md
examples/: basic_web_automation.py  desktop_automation.py  multi_connector_workflow.py
src/processiq/: __init__.py
src/processiq/connectors/: api.py  file.py
src/processiq/core/: __init__.py  exceptions.py  plugin_manager.py
tools/: build.sh  dev-setup.sh
